omnilang/parser.output
Terminals unused in grammar

   TOKEN
   CONTINUING_NEWLINE
   ERROR


Grammar

    0 $accept: root $end

    1 root: statement
    2     | root terminator statement

    3 terminator: TERMINATING_NEWLINE
    4           | SEMICOLON

    5 statement: pipeline AMPERSAND
    6          | pipeline
    7          | assignment
    8          | /* empty */

    9 assignment: DOLLAR VARIABLE EQUALS fragments
   10           | DOLLAR VARIABLE EQUALS pipe_call

   11 pipeline: instruction
   12         | pipeline PIPE instruction

   13 instruction: command
   14            | capture
   15            | pipe_call

   16 capture: PERCENT BEGIN_PAREN command END_PAREN
   17        | PERCENT BEGIN_SQUARE key_values END_SQUARE BEGIN_PAREN command END_PAREN

   18 key_values: fragment_or_variable EQUALS fragment
   19           | key_values COMMA fragment_or_variable EQUALS fragment

   20 command: arguments

   21 pipe_call: COMMAND_PIPE WHITESPACE arguments
   22          | COMMAND_PIPE

   23 arguments: fragments
   24          | arguments WHITESPACE fragments

   25 fragments: fragment
   26          | fragments fragment

   27 fragment: fragment_or_variable
   28         | number
   29         | SINGLE_QUOTED
   30         | DOUBLE_QUOTED
   31         | DOLLAR VARIABLE
   32         | DOLLAR BEGIN_BRACE expression END_BRACE

   33 number: NUMBER

   34 fragment_or_variable: FRAGMENT
   35                     | VARIABLE

   36 expression: fragment


Terminals, with rules where they appear

$end (0) 0
error (256)
TOKEN (258)
WHITESPACE (259) 21 24
CONTINUING_NEWLINE (260)
TERMINATING_NEWLINE (261) 3
PIPE (262) 12
PERCENT (263) 16 17
DOLLAR (264) 9 10 31 32
BEGIN_PAREN (265) 16 17
END_PAREN (266) 16 17
EQUALS (267) 9 10 18 19
BEGIN_SQUARE (268) 17
END_SQUARE (269) 17
BEGIN_BRACE (270) 32
END_BRACE (271) 32
COMMA (272) 19
COMMAND_PIPE (273) 21 22
SEMICOLON (274) 4
AMPERSAND (275) 5
ERROR (276)
NUMBER (277) 33
FRAGMENT (278) 34
SINGLE_QUOTED (279) 29
DOUBLE_QUOTED (280) 30
VARIABLE (281) 9 10 31 35


Nonterminals, with rules where they appear

$accept (27)
    on left: 0
root (28)
    on left: 1 2, on right: 0 2
terminator (29)
    on left: 3 4, on right: 2
statement (30)
    on left: 5 6 7 8, on right: 1 2
assignment (31)
    on left: 9 10, on right: 7
pipeline (32)
    on left: 11 12, on right: 5 6 12
instruction (33)
    on left: 13 14 15, on right: 11 12
capture (34)
    on left: 16 17, on right: 14
key_values (35)
    on left: 18 19, on right: 17 19
command (36)
    on left: 20, on right: 13 16 17
pipe_call (37)
    on left: 21 22, on right: 10 15
arguments (38)
    on left: 23 24, on right: 20 21 24
fragments (39)
    on left: 25 26, on right: 9 23 24 26
fragment (40)
    on left: 27 28 29 30 31 32, on right: 18 19 25 26 36
number (41)
    on left: 33, on right: 28
fragment_or_variable (42)
    on left: 34 35, on right: 18 19 27
expression (43)
    on left: 36, on right: 32


State 0

    0 $accept: . root $end
    1 root: . statement
    2     | . root terminator statement
    5 statement: . pipeline AMPERSAND
    6          | . pipeline
    7          | . assignment
    8          | .  [$end, TERMINATING_NEWLINE, SEMICOLON]
    9 assignment: . DOLLAR VARIABLE EQUALS fragments
   10           | . DOLLAR VARIABLE EQUALS pipe_call
   11 pipeline: . instruction
   12         | . pipeline PIPE instruction
   13 instruction: . command
   14            | . capture
   15            | . pipe_call
   16 capture: . PERCENT BEGIN_PAREN command END_PAREN
   17        | . PERCENT BEGIN_SQUARE key_values END_SQUARE BEGIN_PAREN command END_PAREN
   20 command: . arguments
   21 pipe_call: . COMMAND_PIPE WHITESPACE arguments
   22          | . COMMAND_PIPE
   23 arguments: . fragments
   24          | . arguments WHITESPACE fragments
   25 fragments: . fragment
   26          | . fragments fragment
   27 fragment: . fragment_or_variable
   28         | . number
   29         | . SINGLE_QUOTED
   30         | . DOUBLE_QUOTED
   31         | . DOLLAR VARIABLE
   32         | . DOLLAR BEGIN_BRACE expression END_BRACE
   33 number: . NUMBER
   34 fragment_or_variable: . FRAGMENT
   35                     | . VARIABLE

    PERCENT        shift, and go to state 1
    DOLLAR         shift, and go to state 2
    COMMAND_PIPE   shift, and go to state 3
    NUMBER         shift, and go to state 4
    FRAGMENT       shift, and go to state 5
    SINGLE_QUOTED  shift, and go to state 6
    DOUBLE_QUOTED  shift, and go to state 7
    VARIABLE       shift, and go to state 8

    $default  reduce using rule 8 (statement)

    root                  go to state 9
    statement             go to state 10
    assignment            go to state 11
    pipeline              go to state 12
    instruction           go to state 13
    capture               go to state 14
    command               go to state 15
    pipe_call             go to state 16
    arguments             go to state 17
    fragments             go to state 18
    fragment              go to state 19
    number                go to state 20
    fragment_or_variable  go to state 21


State 1

   16 capture: PERCENT . BEGIN_PAREN command END_PAREN
   17        | PERCENT . BEGIN_SQUARE key_values END_SQUARE BEGIN_PAREN command END_PAREN

    BEGIN_PAREN   shift, and go to state 22
    BEGIN_SQUARE  shift, and go to state 23


State 2

    9 assignment: DOLLAR . VARIABLE EQUALS fragments
   10           | DOLLAR . VARIABLE EQUALS pipe_call
   31 fragment: DOLLAR . VARIABLE
   32         | DOLLAR . BEGIN_BRACE expression END_BRACE

    BEGIN_BRACE  shift, and go to state 24
    VARIABLE     shift, and go to state 25


State 3

   21 pipe_call: COMMAND_PIPE . WHITESPACE arguments
   22          | COMMAND_PIPE .  [$end, TERMINATING_NEWLINE, PIPE, SEMICOLON, AMPERSAND]

    WHITESPACE  shift, and go to state 26

    $default  reduce using rule 22 (pipe_call)


State 4

   33 number: NUMBER .

    $default  reduce using rule 33 (number)


State 5

   34 fragment_or_variable: FRAGMENT .

    $default  reduce using rule 34 (fragment_or_variable)


State 6

   29 fragment: SINGLE_QUOTED .

    $default  reduce using rule 29 (fragment)


State 7

   30 fragment: DOUBLE_QUOTED .

    $default  reduce using rule 30 (fragment)


State 8

   35 fragment_or_variable: VARIABLE .

    $default  reduce using rule 35 (fragment_or_variable)


State 9

    0 $accept: root . $end
    2 root: root . terminator statement
    3 terminator: . TERMINATING_NEWLINE
    4           | . SEMICOLON

    $end                 shift, and go to state 27
    TERMINATING_NEWLINE  shift, and go to state 28
    SEMICOLON            shift, and go to state 29

    terminator  go to state 30


State 10

    1 root: statement .

    $default  reduce using rule 1 (root)


State 11

    7 statement: assignment .

    $default  reduce using rule 7 (statement)


State 12

    5 statement: pipeline . AMPERSAND
    6          | pipeline .  [$end, TERMINATING_NEWLINE, SEMICOLON]
   12 pipeline: pipeline . PIPE instruction

    PIPE       shift, and go to state 31
    AMPERSAND  shift, and go to state 32

    $default  reduce using rule 6 (statement)


State 13

   11 pipeline: instruction .

    $default  reduce using rule 11 (pipeline)


State 14

   14 instruction: capture .

    $default  reduce using rule 14 (instruction)


State 15

   13 instruction: command .

    $default  reduce using rule 13 (instruction)


State 16

   15 instruction: pipe_call .

    $default  reduce using rule 15 (instruction)


State 17

   20 command: arguments .  [$end, TERMINATING_NEWLINE, PIPE, END_PAREN, SEMICOLON, AMPERSAND]
   24 arguments: arguments . WHITESPACE fragments

    WHITESPACE  shift, and go to state 33

    $default  reduce using rule 20 (command)


State 18

   23 arguments: fragments .  [$end, WHITESPACE, TERMINATING_NEWLINE, PIPE, END_PAREN, SEMICOLON, AMPERSAND]
   26 fragments: fragments . fragment
   27 fragment: . fragment_or_variable
   28         | . number
   29         | . SINGLE_QUOTED
   30         | . DOUBLE_QUOTED
   31         | . DOLLAR VARIABLE
   32         | . DOLLAR BEGIN_BRACE expression END_BRACE
   33 number: . NUMBER
   34 fragment_or_variable: . FRAGMENT
   35                     | . VARIABLE

    DOLLAR         shift, and go to state 34
    NUMBER         shift, and go to state 4
    FRAGMENT       shift, and go to state 5
    SINGLE_QUOTED  shift, and go to state 6
    DOUBLE_QUOTED  shift, and go to state 7
    VARIABLE       shift, and go to state 8

    $default  reduce using rule 23 (arguments)

    fragment              go to state 35
    number                go to state 20
    fragment_or_variable  go to state 21


State 19

   25 fragments: fragment .

    $default  reduce using rule 25 (fragments)


State 20

   28 fragment: number .

    $default  reduce using rule 28 (fragment)


State 21

   27 fragment: fragment_or_variable .

    $default  reduce using rule 27 (fragment)


State 22

   16 capture: PERCENT BEGIN_PAREN . command END_PAREN
   20 command: . arguments
   23 arguments: . fragments
   24          | . arguments WHITESPACE fragments
   25 fragments: . fragment
   26          | . fragments fragment
   27 fragment: . fragment_or_variable
   28         | . number
   29         | . SINGLE_QUOTED
   30         | . DOUBLE_QUOTED
   31         | . DOLLAR VARIABLE
   32         | . DOLLAR BEGIN_BRACE expression END_BRACE
   33 number: . NUMBER
   34 fragment_or_variable: . FRAGMENT
   35                     | . VARIABLE

    DOLLAR         shift, and go to state 34
    NUMBER         shift, and go to state 4
    FRAGMENT       shift, and go to state 5
    SINGLE_QUOTED  shift, and go to state 6
    DOUBLE_QUOTED  shift, and go to state 7
    VARIABLE       shift, and go to state 8

    command               go to state 36
    arguments             go to state 17
    fragments             go to state 18
    fragment              go to state 19
    number                go to state 20
    fragment_or_variable  go to state 21


State 23

   17 capture: PERCENT BEGIN_SQUARE . key_values END_SQUARE BEGIN_PAREN command END_PAREN
   18 key_values: . fragment_or_variable EQUALS fragment
   19           | . key_values COMMA fragment_or_variable EQUALS fragment
   34 fragment_or_variable: . FRAGMENT
   35                     | . VARIABLE

    FRAGMENT  shift, and go to state 5
    VARIABLE  shift, and go to state 8

    key_values            go to state 37
    fragment_or_variable  go to state 38


State 24

   27 fragment: . fragment_or_variable
   28         | . number
   29         | . SINGLE_QUOTED
   30         | . DOUBLE_QUOTED
   31         | . DOLLAR VARIABLE
   32         | . DOLLAR BEGIN_BRACE expression END_BRACE
   32         | DOLLAR BEGIN_BRACE . expression END_BRACE
   33 number: . NUMBER
   34 fragment_or_variable: . FRAGMENT
   35                     | . VARIABLE
   36 expression: . fragment

    DOLLAR         shift, and go to state 34
    NUMBER         shift, and go to state 4
    FRAGMENT       shift, and go to state 5
    SINGLE_QUOTED  shift, and go to state 6
    DOUBLE_QUOTED  shift, and go to state 7
    VARIABLE       shift, and go to state 8

    fragment              go to state 39
    number                go to state 20
    fragment_or_variable  go to state 21
    expression            go to state 40


State 25

    9 assignment: DOLLAR VARIABLE . EQUALS fragments
   10           | DOLLAR VARIABLE . EQUALS pipe_call
   31 fragment: DOLLAR VARIABLE .  [$end, WHITESPACE, TERMINATING_NEWLINE, PIPE, DOLLAR, SEMICOLON, AMPERSAND, NUMBER, FRAGMENT, SINGLE_QUOTED, DOUBLE_QUOTED, VARIABLE]

    EQUALS  shift, and go to state 41

    $default  reduce using rule 31 (fragment)


State 26

   21 pipe_call: COMMAND_PIPE WHITESPACE . arguments
   23 arguments: . fragments
   24          | . arguments WHITESPACE fragments
   25 fragments: . fragment
   26          | . fragments fragment
   27 fragment: . fragment_or_variable
   28         | . number
   29         | . SINGLE_QUOTED
   30         | . DOUBLE_QUOTED
   31         | . DOLLAR VARIABLE
   32         | . DOLLAR BEGIN_BRACE expression END_BRACE
   33 number: . NUMBER
   34 fragment_or_variable: . FRAGMENT
   35                     | . VARIABLE

    DOLLAR         shift, and go to state 34
    NUMBER         shift, and go to state 4
    FRAGMENT       shift, and go to state 5
    SINGLE_QUOTED  shift, and go to state 6
    DOUBLE_QUOTED  shift, and go to state 7
    VARIABLE       shift, and go to state 8

    arguments             go to state 42
    fragments             go to state 18
    fragment              go to state 19
    number                go to state 20
    fragment_or_variable  go to state 21


State 27

    0 $accept: root $end .

    $default  accept


State 28

    3 terminator: TERMINATING_NEWLINE .

    $default  reduce using rule 3 (terminator)


State 29

    4 terminator: SEMICOLON .

    $default  reduce using rule 4 (terminator)


State 30

    2 root: root terminator . statement
    5 statement: . pipeline AMPERSAND
    6          | . pipeline
    7          | . assignment
    8          | .  [$end, TERMINATING_NEWLINE, SEMICOLON]
    9 assignment: . DOLLAR VARIABLE EQUALS fragments
   10           | . DOLLAR VARIABLE EQUALS pipe_call
   11 pipeline: . instruction
   12         | . pipeline PIPE instruction
   13 instruction: . command
   14            | . capture
   15            | . pipe_call
   16 capture: . PERCENT BEGIN_PAREN command END_PAREN
   17        | . PERCENT BEGIN_SQUARE key_values END_SQUARE BEGIN_PAREN command END_PAREN
   20 command: . arguments
   21 pipe_call: . COMMAND_PIPE WHITESPACE arguments
   22          | . COMMAND_PIPE
   23 arguments: . fragments
   24          | . arguments WHITESPACE fragments
   25 fragments: . fragment
   26          | . fragments fragment
   27 fragment: . fragment_or_variable
   28         | . number
   29         | . SINGLE_QUOTED
   30         | . DOUBLE_QUOTED
   31         | . DOLLAR VARIABLE
   32         | . DOLLAR BEGIN_BRACE expression END_BRACE
   33 number: . NUMBER
   34 fragment_or_variable: . FRAGMENT
   35                     | . VARIABLE

    PERCENT        shift, and go to state 1
    DOLLAR         shift, and go to state 2
    COMMAND_PIPE   shift, and go to state 3
    NUMBER         shift, and go to state 4
    FRAGMENT       shift, and go to state 5
    SINGLE_QUOTED  shift, and go to state 6
    DOUBLE_QUOTED  shift, and go to state 7
    VARIABLE       shift, and go to state 8

    $default  reduce using rule 8 (statement)

    statement             go to state 43
    assignment            go to state 11
    pipeline              go to state 12
    instruction           go to state 13
    capture               go to state 14
    command               go to state 15
    pipe_call             go to state 16
    arguments             go to state 17
    fragments             go to state 18
    fragment              go to state 19
    number                go to state 20
    fragment_or_variable  go to state 21


State 31

   12 pipeline: pipeline PIPE . instruction
   13 instruction: . command
   14            | . capture
   15            | . pipe_call
   16 capture: . PERCENT BEGIN_PAREN command END_PAREN
   17        | . PERCENT BEGIN_SQUARE key_values END_SQUARE BEGIN_PAREN command END_PAREN
   20 command: . arguments
   21 pipe_call: . COMMAND_PIPE WHITESPACE arguments
   22          | . COMMAND_PIPE
   23 arguments: . fragments
   24          | . arguments WHITESPACE fragments
   25 fragments: . fragment
   26          | . fragments fragment
   27 fragment: . fragment_or_variable
   28         | . number
   29         | . SINGLE_QUOTED
   30         | . DOUBLE_QUOTED
   31         | . DOLLAR VARIABLE
   32         | . DOLLAR BEGIN_BRACE expression END_BRACE
   33 number: . NUMBER
   34 fragment_or_variable: . FRAGMENT
   35                     | . VARIABLE

    PERCENT        shift, and go to state 1
    DOLLAR         shift, and go to state 34
    COMMAND_PIPE   shift, and go to state 3
    NUMBER         shift, and go to state 4
    FRAGMENT       shift, and go to state 5
    SINGLE_QUOTED  shift, and go to state 6
    DOUBLE_QUOTED  shift, and go to state 7
    VARIABLE       shift, and go to state 8

    instruction           go to state 44
    capture               go to state 14
    command               go to state 15
    pipe_call             go to state 16
    arguments             go to state 17
    fragments             go to state 18
    fragment              go to state 19
    number                go to state 20
    fragment_or_variable  go to state 21


State 32

    5 statement: pipeline AMPERSAND .

    $default  reduce using rule 5 (statement)


State 33

   24 arguments: arguments WHITESPACE . fragments
   25 fragments: . fragment
   26          | . fragments fragment
   27 fragment: . fragment_or_variable
   28         | . number
   29         | . SINGLE_QUOTED
   30         | . DOUBLE_QUOTED
   31         | . DOLLAR VARIABLE
   32         | . DOLLAR BEGIN_BRACE expression END_BRACE
   33 number: . NUMBER
   34 fragment_or_variable: . FRAGMENT
   35                     | . VARIABLE

    DOLLAR         shift, and go to state 34
    NUMBER         shift, and go to state 4
    FRAGMENT       shift, and go to state 5
    SINGLE_QUOTED  shift, and go to state 6
    DOUBLE_QUOTED  shift, and go to state 7
    VARIABLE       shift, and go to state 8

    fragments             go to state 45
    fragment              go to state 19
    number                go to state 20
    fragment_or_variable  go to state 21


State 34

   31 fragment: DOLLAR . VARIABLE
   32         | DOLLAR . BEGIN_BRACE expression END_BRACE

    BEGIN_BRACE  shift, and go to state 24
    VARIABLE     shift, and go to state 46


State 35

   26 fragments: fragments fragment .

    $default  reduce using rule 26 (fragments)


State 36

   16 capture: PERCENT BEGIN_PAREN command . END_PAREN

    END_PAREN  shift, and go to state 47


State 37

   17 capture: PERCENT BEGIN_SQUARE key_values . END_SQUARE BEGIN_PAREN command END_PAREN
   19 key_values: key_values . COMMA fragment_or_variable EQUALS fragment

    END_SQUARE  shift, and go to state 48
    COMMA       shift, and go to state 49


State 38

   18 key_values: fragment_or_variable . EQUALS fragment

    EQUALS  shift, and go to state 50


State 39

   36 expression: fragment .

    $default  reduce using rule 36 (expression)


State 40

   32 fragment: DOLLAR BEGIN_BRACE expression . END_BRACE

    END_BRACE  shift, and go to state 51


State 41

    9 assignment: DOLLAR VARIABLE EQUALS . fragments
   10           | DOLLAR VARIABLE EQUALS . pipe_call
   21 pipe_call: . COMMAND_PIPE WHITESPACE arguments
   22          | . COMMAND_PIPE
   25 fragments: . fragment
   26          | . fragments fragment
   27 fragment: . fragment_or_variable
   28         | . number
   29         | . SINGLE_QUOTED
   30         | . DOUBLE_QUOTED
   31         | . DOLLAR VARIABLE
   32         | . DOLLAR BEGIN_BRACE expression END_BRACE
   33 number: . NUMBER
   34 fragment_or_variable: . FRAGMENT
   35                     | . VARIABLE

    DOLLAR         shift, and go to state 34
    COMMAND_PIPE   shift, and go to state 3
    NUMBER         shift, and go to state 4
    FRAGMENT       shift, and go to state 5
    SINGLE_QUOTED  shift, and go to state 6
    DOUBLE_QUOTED  shift, and go to state 7
    VARIABLE       shift, and go to state 8

    pipe_call             go to state 52
    fragments             go to state 53
    fragment              go to state 19
    number                go to state 20
    fragment_or_variable  go to state 21


State 42

   21 pipe_call: COMMAND_PIPE WHITESPACE arguments .  [$end, TERMINATING_NEWLINE, PIPE, SEMICOLON, AMPERSAND]
   24 arguments: arguments . WHITESPACE fragments

    WHITESPACE  shift, and go to state 33

    $default  reduce using rule 21 (pipe_call)


State 43

    2 root: root terminator statement .

    $default  reduce using rule 2 (root)


State 44

   12 pipeline: pipeline PIPE instruction .

    $default  reduce using rule 12 (pipeline)


State 45

   24 arguments: arguments WHITESPACE fragments .  [$end, WHITESPACE, TERMINATING_NEWLINE, PIPE, END_PAREN, SEMICOLON, AMPERSAND]
   26 fragments: fragments . fragment
   27 fragment: . fragment_or_variable
   28         | . number
   29         | . SINGLE_QUOTED
   30         | . DOUBLE_QUOTED
   31         | . DOLLAR VARIABLE
   32         | . DOLLAR BEGIN_BRACE expression END_BRACE
   33 number: . NUMBER
   34 fragment_or_variable: . FRAGMENT
   35                     | . VARIABLE

    DOLLAR         shift, and go to state 34
    NUMBER         shift, and go to state 4
    FRAGMENT       shift, and go to state 5
    SINGLE_QUOTED  shift, and go to state 6
    DOUBLE_QUOTED  shift, and go to state 7
    VARIABLE       shift, and go to state 8

    $default  reduce using rule 24 (arguments)

    fragment              go to state 35
    number                go to state 20
    fragment_or_variable  go to state 21


State 46

   31 fragment: DOLLAR VARIABLE .

    $default  reduce using rule 31 (fragment)


State 47

   16 capture: PERCENT BEGIN_PAREN command END_PAREN .

    $default  reduce using rule 16 (capture)


State 48

   17 capture: PERCENT BEGIN_SQUARE key_values END_SQUARE . BEGIN_PAREN command END_PAREN

    BEGIN_PAREN  shift, and go to state 54


State 49

   19 key_values: key_values COMMA . fragment_or_variable EQUALS fragment
   34 fragment_or_variable: . FRAGMENT
   35                     | . VARIABLE

    FRAGMENT  shift, and go to state 5
    VARIABLE  shift, and go to state 8

    fragment_or_variable  go to state 55


State 50

   18 key_values: fragment_or_variable EQUALS . fragment
   27 fragment: . fragment_or_variable
   28         | . number
   29         | . SINGLE_QUOTED
   30         | . DOUBLE_QUOTED
   31         | . DOLLAR VARIABLE
   32         | . DOLLAR BEGIN_BRACE expression END_BRACE
   33 number: . NUMBER
   34 fragment_or_variable: . FRAGMENT
   35                     | . VARIABLE

    DOLLAR         shift, and go to state 34
    NUMBER         shift, and go to state 4
    FRAGMENT       shift, and go to state 5
    SINGLE_QUOTED  shift, and go to state 6
    DOUBLE_QUOTED  shift, and go to state 7
    VARIABLE       shift, and go to state 8

    fragment              go to state 56
    number                go to state 20
    fragment_or_variable  go to state 21


State 51

   32 fragment: DOLLAR BEGIN_BRACE expression END_BRACE .

    $default  reduce using rule 32 (fragment)


State 52

   10 assignment: DOLLAR VARIABLE EQUALS pipe_call .

    $default  reduce using rule 10 (assignment)


State 53

    9 assignment: DOLLAR VARIABLE EQUALS fragments .  [$end, TERMINATING_NEWLINE, SEMICOLON]
   26 fragments: fragments . fragment
   27 fragment: . fragment_or_variable
   28         | . number
   29         | . SINGLE_QUOTED
   30         | . DOUBLE_QUOTED
   31         | . DOLLAR VARIABLE
   32         | . DOLLAR BEGIN_BRACE expression END_BRACE
   33 number: . NUMBER
   34 fragment_or_variable: . FRAGMENT
   35                     | . VARIABLE

    DOLLAR         shift, and go to state 34
    NUMBER         shift, and go to state 4
    FRAGMENT       shift, and go to state 5
    SINGLE_QUOTED  shift, and go to state 6
    DOUBLE_QUOTED  shift, and go to state 7
    VARIABLE       shift, and go to state 8

    $default  reduce using rule 9 (assignment)

    fragment              go to state 35
    number                go to state 20
    fragment_or_variable  go to state 21


State 54

   17 capture: PERCENT BEGIN_SQUARE key_values END_SQUARE BEGIN_PAREN . command END_PAREN
   20 command: . arguments
   23 arguments: . fragments
   24          | . arguments WHITESPACE fragments
   25 fragments: . fragment
   26          | . fragments fragment
   27 fragment: . fragment_or_variable
   28         | . number
   29         | . SINGLE_QUOTED
   30         | . DOUBLE_QUOTED
   31         | . DOLLAR VARIABLE
   32         | . DOLLAR BEGIN_BRACE expression END_BRACE
   33 number: . NUMBER
   34 fragment_or_variable: . FRAGMENT
   35                     | . VARIABLE

    DOLLAR         shift, and go to state 34
    NUMBER         shift, and go to state 4
    FRAGMENT       shift, and go to state 5
    SINGLE_QUOTED  shift, and go to state 6
    DOUBLE_QUOTED  shift, and go to state 7
    VARIABLE       shift, and go to state 8

    command               go to state 57
    arguments             go to state 17
    fragments             go to state 18
    fragment              go to state 19
    number                go to state 20
    fragment_or_variable  go to state 21


State 55

   19 key_values: key_values COMMA fragment_or_variable . EQUALS fragment

    EQUALS  shift, and go to state 58


State 56

   18 key_values: fragment_or_variable EQUALS fragment .

    $default  reduce using rule 18 (key_values)


State 57

   17 capture: PERCENT BEGIN_SQUARE key_values END_SQUARE BEGIN_PAREN command . END_PAREN

    END_PAREN  shift, and go to state 59


State 58

   19 key_values: key_values COMMA fragment_or_variable EQUALS . fragment
   27 fragment: . fragment_or_variable
   28         | . number
   29         | . SINGLE_QUOTED
   30         | . DOUBLE_QUOTED
   31         | . DOLLAR VARIABLE
   32         | . DOLLAR BEGIN_BRACE expression END_BRACE
   33 number: . NUMBER
   34 fragment_or_variable: . FRAGMENT
   35                     | . VARIABLE

    DOLLAR         shift, and go to state 34
    NUMBER         shift, and go to state 4
    FRAGMENT       shift, and go to state 5
    SINGLE_QUOTED  shift, and go to state 6
    DOUBLE_QUOTED  shift, and go to state 7
    VARIABLE       shift, and go to state 8

    fragment              go to state 60
    number                go to state 20
    fragment_or_variable  go to state 21


State 59

   17 capture: PERCENT BEGIN_SQUARE key_values END_SQUARE BEGIN_PAREN command END_PAREN .

    $default  reduce using rule 17 (capture)


State 60

   19 key_values: key_values COMMA fragment_or_variable EQUALS fragment .

    $default  reduce using rule 19 (key_values)
